Use methods from SequencedCollection